--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="question-box-one js-question-box-one">
             <h2 class="question-one js-question-one">Question 1</h2>
             <ul class="answers-one js-answers-one">
-                <li>answer1</li>
-                <li>answer2</li>
-                <li>answer3</li>
-                <li>answer4</li>
+                <li><a href="#" type="submit">answer1</a></li>
+                <li><a href="#" type="submit">answer2</a></li>
+                <li><a href="#" type="submit">answer3</a></li>
+                <li><a href="#" type="submit">answer4</a></li>
             </ul>
             <button type="submit" class="button-one js-button-one">Confirm</button>
             <h3 class="feedback-one js-feedback-one">Feedback Message</h3>
@@ -26,57 +26,57 @@
             <h4 class="counter-one js-counter-one">Correct/Incorrect Counter</h4>
         </div>
         <div class="question-box-two js-question-box-two">
-                <h2 class="question-two js-question-two">Question 1</h2>
-                <ul class="answers-two js-answers-two">
-                    <li>answer1</li>
-                    <li>answer2</li>
-                    <li>answer3</li>
-                    <li>answer4</li>
-                </ul>
-                <button type="submit" class="button-two js-button-two">Confirm</button>
-                <h3 class="feedback-two js-feedback-two">Feedback Message</h3>
-                <h4 class="question-number-two js-question-number-two">Question Number</h4>
-                <h4 class="counter-two js-counter-two">Correct/Incorrect Counter</h4>
-            </div>
-            <div class="question-box-three js-question-box-three">
-                    <h2 class="question-three js-question-three">Question 1</h2>
-                    <ul class="answers-three js-answers-three">
-                        <li>answer1</li>
-                        <li>answer2</li>
-                        <li>answer3</li>
-                        <li>answer4</li>
-                    </ul>
-                    <button type="submit" class="button-three js-button-three">Confirm</button>
-                    <h3 class="feedback-three js-feedback-three">Feedback Message</h3>
-                    <h4 class="question-number-three js-question-number-three">Question Number</h4>
-                    <h4 class="counter-three js-counter-three">Correct/Incorrect Counter</h4>
-                </div>
-                <div class="question-box-four js-question-box-four">
-                        <h2 class="question-four js-question-four">Question 1</h2>
-                        <ul class="answers-four js-answers-four">
-                            <li>answer1</li>
-                            <li>answer2</li>
-                            <li>answer3</li>
-                            <li>answer4</li>
-                        </ul>
-                        <button type="submit" class="button-four js-button-four">Confirm</button>
-                        <h3 class="feedback-four js-feedback-four">Feedback Message</h3>
-                        <h4 class="question-number-four js-question-number-four">Question Number</h4>
-                        <h4 class="counter-four js-counter-four">Correct/Incorrect Counter</h4>
-                    </div>
-                    <div class="question-box-five js-question-box-five">
-                            <h2 class="question-five js-question-five">Question 1</h2>
-                            <ul class="answers-five js-answers-five">
-                                <li>answer1</li>
-                                <li>answer2</li>
-                                <li>answer3</li>
-                                <li>answer4</li>
-                            </ul>
-                            <button type="submit" class="button-five js-button-five">Confirm</button>
-                            <h3 class="feedback-five js-feedback-five">Feedback Message</h3>
-                            <h4 class="question-number-five js-question-number-five">Question Number</h4>
-                            <h4 class="counter-five js-counter-five">Correct/Incorrect Counter</h4>
-                        </div>
+            <h2 class="question-two js-question-two">Question 1</h2>
+            <ul class="answers-two js-answers-two">
+                <li><a href="#" type="submit">answer1</a></li>
+                <li><a href="#" type="submit">answer2</a></li>
+                <li><a href="#" type="submit">answer3</a></li>
+                <li><a href="#" type="submit">answer4</a></li>
+            </ul>
+            <button type="submit" class="button-two js-button-two">Confirm</button>
+            <h3 class="feedback-two js-feedback-two">Feedback Message</h3>
+            <h4 class="question-number-two js-question-number-two">Question Number</h4>
+            <h4 class="counter-two js-counter-two">Correct/Incorrect Counter</h4>
+        </div>
+        <div class="question-box-three js-question-box-three">
+            <h2 class="question-three js-question-three">Question 1</h2>
+            <ul class="answers-three js-answers-three">
+                <li><a href="#" type="submit">answer1</a></li>
+                <li><a href="#" type="submit">answer2</a></li>
+                <li><a href="#" type="submit">answer3</a></li>
+                <li><a href="#" type="submit">answer4</a></li>
+            </ul>
+            <button type="submit" class="button-three js-button-three">Confirm</button>
+            <h3 class="feedback-three js-feedback-three">Feedback Message</h3>
+            <h4 class="question-number-three js-question-number-three">Question Number</h4>
+            <h4 class="counter-three js-counter-three">Correct/Incorrect Counter</h4>
+        </div>
+        <div class="question-box-four js-question-box-four">
+            <h2 class="question-four js-question-four">Question 1</h2>
+            <ul class="answers-four js-answers-four">
+                <li><a href="#" type="submit">answer1</a></li>
+                <li><a href="#" type="submit">answer2</a></li>
+                <li><a href="#" type="submit">answer3</a></li>
+                <li><a href="#" type="submit">answer4</a></li>
+            </ul>
+            <button type="submit" class="button-four js-button-four">Confirm</button>
+            <h3 class="feedback-four js-feedback-four">Feedback Message</h3>
+            <h4 class="question-number-four js-question-number-four">Question Number</h4>
+            <h4 class="counter-four js-counter-four">Correct/Incorrect Counter</h4>
+        </div>
+        <div class="question-box-five js-question-box-five">
+            <h2 class="question-five js-question-five">Question 1</h2>
+            <ul class="answers-five js-answers-five">
+                <li><a href="#" type="submit">answer1</a></li>
+                <li><a href="#" type="submit">answer2</a></li>
+                <li><a href="#" type="submit">answer3</a></li>
+                <li><a href="#" type="submit">answer4</a></li>
+            </ul>
+            <button type="submit" class="button-five js-button-five">Confirm</button>
+            <h3 class="feedback-five js-feedback-five">Feedback Message</h3>
+            <h4 class="question-number-five js-question-number-five">Question Number</h4>
+            <h4 class="counter-five js-counter-five">Correct/Incorrect Counter</h4>
+        </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
