new wireframe in progress

--- a/index2.html
+++ b/index2.html
@@ -13,9 +13,15 @@
     </header>
     <main class="container">
         <div>
-            <h2>Welcome to the Workout Quiz! Click "Start" to begin!</h2>
-            <form class="submit" action="index2.html">
-                <input type="submit" value="Start">
+            <h2>Which of the following exercises heavily target the chest muscles?</h2>
+            <form action="" method="post">
+                <input type="radio" value="bicep-curl">Bicep Curl
+                <input type="radio" value="Squat">Squat
+                <input type="radio" value="Pushup">Pushup
+                <input type="radio" value="Row">Row
+            </form>
+            <form action="index3.html">
+                <input type="submit" value="Submit">
             </form>
             <section>
                     <h4 class="score">Score:<span>0</span></h4>
