--- a/index4.html
+++ b/index4.html
@@ -13,9 +13,9 @@
     </header>
     <main class="container">
         <div>
-            <h2>Welcome to the Workout Quiz! Click "Start" to begin!</h2>
-            <form class="submit" action="index2.html">
-                <input type="submit" value="Start">
+            <h3>Here is your final feedback, hit "Restart" to to go again!</h3>
+            <form action="index.html">
+                <input type="submit" value="Restart">
             </form>
             <section>
                     <h4 class="score">Score:<span>0</span></h4>
