--- a/index2.html
+++ b/index2.html
@@ -14,10 +14,10 @@
     <main class="container">
             <h2>Which of the following exercises heavily target the chest muscles?</h2>
             <form action="" method="post">
-                <input type="radio" value="bicep-curl">Bicep Curl
-                <input type="radio" value="Squat">Squat
-                <input type="radio" value="Pushup">Pushup
-                <input type="radio" value="Row">Row
+                <input type="radio" name="radAnswer" value="bicep-curl">Bicep Curl
+                <input type="radio" name="radAnswer" value="Squat">Squat
+                <input type="radio" name="radAnswer" value="Pushup">Pushup
+                <input type="radio" name="radAnswer" value="Row">Row
             </form>
             <form action="index3.html">
                 <input type="submit" value="Submit">
