--- a/index3.html
+++ b/index3.html
@@ -14,10 +14,10 @@
     <main class="container">
             <h2>Which of the following exercises heavily target the chest muscles?</h2>
             <form action="" method="post">
-                <input type="radio" value="bicep-curl">Bicep Curl
-                <input type="radio" value="Squat">Squat
-                <input type="radio" value="Pushup">Pushup
-                <input type="radio" value="Row">Row
+                <input type="radio" name="radAnswer" value="bicep-curl">Bicep Curl
+                <input type="radio" name="radAnswer" value="Squat">Squat
+                <input type="radio" name="radAnswer" value="Pushup">Pushup
+                <input type="radio" name="radAnswer" value="Row">Row
             </form>
             <h3>Here is your feedback, hit "Next" to continue!</h3>
             <form action="index4.html">
