stuck on radio append

--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
         <h1>Workout Quiz</h1>
     </header>
     <main class="container">
-            <h2>Welcome to the Workout Quiz! Click "Start" to begin!</h2>
-            <form class="submit" action="index2.html">
+            <h2 class="question-title">Welcome to the Workout Quiz! Click "Start" to begin!</h2>
+            <form class="answer-choices">
+            </form>
+            <form class="start">
                 <input type="submit" value="Start">
             </form>
             
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
+    <script src="store.js"></script>
 </body>
 </html>
