stuck on checkCorrectAnswer

--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
                 <input type="radio" name="radAnswer" value="Pushup">Pushup
                 <input type="radio" name="radAnswer" value="Row">Row
             </form>
-            <form action="index3.html">
+            <form>
                 <input type="submit" value="Submit">
             </form>
             <section>
