--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@
                 <input type="radio" name="radAnswer" value="Row">Row
             </form>
             <h3>Here is your feedback, hit "Next" to continue!</h3>
-            <form action="index4.html">
+            <form>
                 <input type="submit" value="Next">
             </form>
             <section>
