--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <form class="start">
                 <input type="submit" value="Start">
             </form>
+            <section class="score-and-count">
+            </section>
             
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
