--- a/index4.html
+++ b/index4.html
@@ -13,7 +13,7 @@
     </header>
     <main class="container">
             <h3>Here is your final feedback, hit "Restart" to to go again!</h3>
-            <form action="index.html">
+            <form>
                 <input type="submit" value="Restart">
             </form>
             <section>
