--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <h1>Workout Quiz</h1>
     </header>
     <main class="container">
-            <h2 class="question-title">Welcome to the Workout Quiz! Click "Start" to begin!</h2>
-            <form class="answer-choices">
-            </form>
-            <form class="start">
-                <input type="submit" value="Start">
-            </form>
-            <section class="score-and-count">
-            </section>
-            
+        <h2 class="question-title">Welcome to the Workout Quiz! Click "Start" to begin!</h2>
+        <form class="start-quiz">
+            <input class="start" type="submit" value="Start">
+        </form>  
+        <form class="quiz">
+            <input class="submit" type="submit" value="Submit">
+        </form>
+        <section class="score-and-count">
+        </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
